--- a/signin_login_flask/templates/base.html
+++ b/signin_login_flask/templates/base.html
@@ -28,13 +28,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                     </li>
-
+                    {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('account') }}">Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Log out</a>
+                    </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('login') }}">Log In</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('register') }}">Sign Up</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
@@ -44,7 +52,7 @@
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
     {% for category, msg in messages %}
-        <div class="alert alert-{{category}}">{{ msg }}</div>
+    <div class="alert alert-{{category}}">{{ msg }}</div>
     {% endfor %}
     {% endif %}
     {% endwith %}
