--- a/signin_login_flask/templates/home.html
+++ b/signin_login_flask/templates/home.html
@@ -3,12 +3,14 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-
-<div class="text-dark bg-light">
-    <h1 class="h1">Hello, this is the HomePage</h1>
-    <p class="">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque molestiae veritatis placeat iusto, quibusdam temporibus totam blanditiis iste libero ullam quas aperiam maiores tempora recusandae corporis, tempore beatae quasi dolores!
-    </p>
+<div class="container">
+    <div style="text-align:center;">
+        <h1 class="h1">Hello, this is the HomePage</h1>
+        <p class="text-bg-light">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque molestiae veritatis placeat iusto, quibusdam
+            temporibus totam blanditiis iste libero ullam quas aperiam maiores tempora recusandae corporis, tempore
+            beatae quasi dolores!
+        </p>
+    </div>
 </div>
-
 {% endblock content %}
